--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
+    {% block stylesheet %}
     <link href="{{ asset('bundles/jordillonchcrudgenerator/css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ asset('css/bootstrap.min_1.css') }}" rel="stylesheet">
     <link href="{{ asset('css/spiderman.css') }}" rel="stylesheet">
@@ -24,7 +25,7 @@
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    {% endblock %}
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="{{ asset('bundles/jordillonchcrudgenerator/images/favicon.ico') }}">
 </head>
@@ -47,12 +48,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <!--button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button-->
+          </button>
             <a class="navbar-brand" href="#"><img src="{{ asset('images/LOGO.png') }}" /></a>
         </div>
         <div class="navbar-collapse collapse">
@@ -120,11 +121,13 @@
 
 </div>
 
-
+{% block javascript %}
 <script src="{{ asset('bundles/jordillonchcrudgenerator/js/jquery.min.js') }}"></script>
 <script src="{{ asset('bundles/jordillonchcrudgenerator/js/bootstrap.js') }}"></script>
+<script src="{{ asset('./js/nombre_en_lettre.js') }}"></script>
+<script src="{{ asset('./js/raphael-min.js') }}"></script>
 <script src="{{ asset('./js/spiderman.js') }}"></script>
 
-{% block javascript %}{% endblock %}
+{% endblock %}
 </body>
 </html>
