--- a/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/show.html.twig
@@ -1,8 +1,12 @@
 {#% extends 'JordiLlonchCrudGeneratorBundle::layout.html.twig' %#}
 {% extends '::base.html.twig' %}
 
+{% block stylesheet %}
+    {{ parent() }} 
+    <link href="{{ asset('css/print.css') }}" rel="stylesheet" media="print">
+{% endblock %}    
 {% block title %}
-{{ parent() }} - {{ 'views.show.show'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}
+    {{ parent() }} - {{ 'views.show.show'|trans({'%entity%': 'Facture'}, 'JordiLlonchCrudGeneratorBundle') }}
 {% endblock %}
 
 {% block page %}
@@ -12,149 +16,185 @@
     <div class="row">
         <div class="span5 ">
             <div class="panel panel-success background_infos">
-                    <div class="panel-heading"><h3 class="panel-title">Informations du client</h3></div>
-                    <div class="panel-body">
+                <div class="panel-heading"><h3 class="panel-title">Informations du client</h3></div>
+                <div class="panel-body">
 
-<form class="form-horizontal">
-    <fieldset>        
-        
-        <p class="control-group">
-            <label class="control-label">Nom</label>
-            <!--div class=""-->
-                <span class="">{{ entity.couture.client.nom }}</span>            
-            <!--/div-->
-        </p>
-        <p class="control-group">
-            <label class="control-label">Prénom</label>
-            <!--div class=""-->
-                <span class="">{{ entity.couture.client.prenom }}</span>            
-            <!--/div-->
-        </p>    
-        <p class="control-group">
-            <label class="control-label">Téléphone</label>
-            <!--div class=""-->
-                <span class="">{{ entity.couture.client.telephone }}</span>            
-            <!--/div-->
-        </p>
-        <p class="control-group">
-            <label class="control-label">Adresse</label>
-            <!--div class=""-->
-                <span class="">{{ entity.couture.client.adresse }}</span>            
-            <!--/div-->
-        </p>
-        
-        
-        <!--div class="control-group">
-            <label class="control-label">Id</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.id }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Date</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.date|date('Y-m-d H:i:s') }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Datemod</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datemod|date('Y-m-d H:i:s') }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Datec</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datec|date('Y-m-d H:i:s') }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Iduser</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.iduser }}</span>            </div>
-        </div>        <div class="control-group">
-            <label class="control-label">Avance</label>
-            <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.avance }}</span>            </div>
-        </div-->    </fieldset>
-</form>
+                    <form class="form-horizontal">
+                        <fieldset>        
+
+                            <p class="control-group">
+                                <label class="control-label">Nom</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.client.nom }}</span>            
+                                <!--/div-->
+                            </p>
+                            <p class="control-group">
+                                <label class="control-label">Prénom</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.client.prenom }}</span>            
+                                <!--/div-->
+                            </p>    
+                            <p class="control-group">
+                                <label class="control-label">Téléphone</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.client.telephone }}</span>            
+                                <!--/div-->
+                            </p>
+                            <p class="control-group">
+                                <label class="control-label">Adresse</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.client.adresse }}</span>            
+                                <!--/div-->
+                            </p>
+
+
+                            <!--div class="control-group">
+                                <label class="control-label">Id</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.id }}</span>            </div>
+                            </div>        <div class="control-group">
+                                <label class="control-label">Date</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.date|date('Y-m-d H:i:s') }}</span>            </div>
+                            </div>        <div class="control-group">
+                                <label class="control-label">Datemod</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datemod|date('Y-m-d H:i:s') }}</span>            </div>
+                            </div>        <div class="control-group">
+                                <label class="control-label">Datec</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.datec|date('Y-m-d H:i:s') }}</span>            </div>
+                            </div>        <div class="control-group">
+                                <label class="control-label">Iduser</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.iduser }}</span>            </div>
+                            </div>        <div class="control-group">
+                                <label class="control-label">Avance</label>
+                                <div class="controls">                <span class="input-xlarge uneditable-input">{{ entity.avance }}</span>            </div>
+                            </div-->    </fieldset>
+                    </form>
+                </div>
+            </div>
+
         </div>
-        </div>
-        
-</div>
-        <div class="span6 ">
-            <div class="panel panel-success background_infos">
-                    <div class="panel-heading"><h3 class="panel-title">Informations Facture</h3></div>
-                    <div class="panel-body">
+        <div class="span6 classe-masquee">
+            <div class="panel panel-success background_infos classe-masquee">
+                <div class="panel-heading"><h3 class="panel-title">Informations Facture</h3></div>
+                <div class="panel-body">
 
-            <form class="form-horizontal">
-                <fieldset>        
+                    <form class="form-horizontal">
+                        <fieldset>        
 
-                    <p class="control-group">
-                        <label class="control-label">Date</label>
-                        <!--div class=""-->
-                            <span class="">{{ entity.date|date ('d-M-Y') }}</span>            
-                        <!--/div-->
-                    </p>
-                    <p class="control-group">
-                        <label class="control-label">Désignation</label>
-                        <!--div class=""-->
-                            <span class="">{{ entity.couture.infosCouture }}</span>            
-                        <!--/div-->
-                    </p>
-                    <p class="control-group">
-                        <label class="control-label">Prix</label>
-                        <!--div class=""-->
-                            <span class="">{{ entity.couture.prix }}</span>            
-                        <!--/div-->
-                    </p>    
-                    <p class="control-group">
-                        <label class="control-label">Avance</label>
-                        <!--div class=""-->
-                            <span class="">{{ entity.avance }}</span>            
-                        <!--/div-->
-                    </p>
-                    <!--p class="control-group">
-                        <label class="control-label">Reste à payer </label>
-                        <div class="">
-                            <span class="">{{ entity.couture.prix - entity.avance }} </span>            
-                        </div>
-                    </p-->
-                    
+                            <p class="control-group">
+                                <label class="control-label">Date</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.date|date ('d-M-Y') }}</span>            
+                                <!--/div-->
+                            </p>
+                            <p class="control-group">
+                                <label class="control-label">Désignation</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.infosCouture }}</span>            
+                                <!--/div-->
+                            </p>
+                            <p class="control-group">
+                                <label class="control-label">Prix</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.couture.prix }}</span>            
+                                <!--/div-->
+                            </p>    
+                            <p class="control-group">
+                                <label class="control-label">Avance</label>
+                                <!--div class=""-->
+                                <span class="">{{ entity.avance }}</span>            
+                                <!--/div-->
+                            </p>
+                            <!--p class="control-group">
+                                <label class="control-label">Reste à payer </label>
+                                <div class="">
+                                    <span class="">{{ entity.couture.prix - entity.avance }} </span>            
+                                </div>
+                            </p-->
+
 
 
                         </fieldset>
-            </form>
-                        
-        </div>
-        </div>
-        
-</div>
-                        <div class="span11 ">
-            <div class="panel panel-danger">
-                <div class="panel-heading"><h3 class="panel-title">Reste à payer : <span class="badge">{{ entity.couture.prix - entity.avance }}</span></h3></div>
-                    
-                        
-                    </div>
-                    </div>
-                          
-    <div class="span11">
-                <div class="panel panel-success">
-                    <div class="panel-heading"><h3 class="panel-title">Informations Modèle <span class="badge">3</span></h3></div>
-                    <div class="panel-body">
-                        <form class='table-details'>
-                            <fieldset>
-                                <p class="control-group">
-                                            <label class="control-label">Libellé</label>
-                                            <!--div class=""-->
-                                                <span class="">{{ entity.couture.modele.libelle }}</span>            
-                                            <!--/div-->
-                                </p>
-                                
-                                    <div class="controls">
-                                        <span class="image-responsive-modele">
-                                            <img src={{ asset ( entity.couture.modele.image.getWebPath()) }} /> 
-                                        </span>            
-                                    </div>
-                                
-                                </fieldset>
-                        </form>
-                                        
-                                    
-                               
-                    </div>
+                    </form>
+
                 </div>
-            </div>  
-        
+            </div>
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="span12">
+            <table class="table table-striped facture-table">
+                <tr>
+                    <th>Quantité</th>
+                    <th>Désignation</th>
+                    <th>Prix unitaire</th>
+                    <th>Prix total</th>
+
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td> {{ entity.couture.modele.libelle }} </td>
+                    <td> {{ entity.couture.prix }} FCFA</td>
+                    <td> {{ entity.couture.prix * 1}} FCFA</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Avance</td>
+                    <td></td>
+                    <td>{{ entity.avance }}</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>NET à payer</td>
+                    <td></td>
+                    <td id="net-a-payer" data-reste="{{ entity.couture.prix - entity.avance }}">{{ entity.couture.prix - entity.avance }} FCFA</td>
+                </tr>
+            </table>
+            <hr>
+            <div class="span11 hide-content classe-masquee"> 
+                <p  >Arrété la présente facture à la somme de <span class="reste"></span> Francs CFA</p>
+            </div>
+        </div>
+    </div>
+    <div class="span11 ">
+        <div class="panel panel-danger">
+            <div class="panel-heading"><h3 class="panel-title">Reste à payer : <span class="badge">{{ entity.couture.prix - entity.avance }}</span></h3></div>
+
+
+        </div>
     </div>
 
-<div class='row'>
+    <div class="span11 classe-masquee">
+        <div class="panel panel-success">
+            <div class="panel-heading"><h3 class="panel-title">Informations Modèle <span class="badge">3</span></h3></div>
+            <div class="panel-body">
+                <form class='table-details'>
+                    <fieldset>
+                        <p class="control-group">
+                            <label class="control-label">Libellé</label>
+                            <!--div class=""-->
+                            <span class="">{{ entity.couture.modele.libelle }}</span>            
+                            <!--/div-->
+                        </p>
+
+                        <div class="controls">
+                            <span class="image-responsive-modele">
+                                <img src={{ asset ( entity.couture.modele.image.getWebPath()) }} /> 
+                            </span>            
+                        </div>
+
+                    </fieldset>
+                </form>
+
+
+
+            </div>
+        </div>
+    </div>  
+
+</div>
+
+<div class='row classe-masquee'>
     <div class="float-left">
         <a class="btn" href="{{ path('facture') }}">
             {{ 'views.recordactions.backtothelist'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
@@ -172,5 +212,12 @@
             <button class="btn btn-danger" type="submit" onclick="return confirm('{{ 'views.recordactions.confirm'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}');">{{ 'views.recordactions.delete'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
         </form>
     </div>
+    <div class="float-left">
+        <a id="btn-print" class="btn btn-warning" href="#">
+            Imprimer
+        </a>
+    </div>
 </div>
+
 {% endblock %}
+
